@startuml machwave.models.propulsion.motors
!pragma useIntermediatePackages false

abstract class machwave.models.propulsion.motors.liquid.LiquidEngine {
  feed_system: FeedSystem
}
abstract class machwave.models.propulsion.motors.base.Motor {
  propellant: P
  thrust_chamber: T
  other_losses: float
}
class machwave.models.propulsion.motors.solid.SolidMotor {
  grain: Grain
  propellant: SolidPropellant
  cf_ideal: None
  cf_real: None
}
machwave.models.propulsion.motors.base.Motor <|-- machwave.models.propulsion.motors.liquid.LiquidEngine
machwave.models.propulsion.motors.base.Motor *-- machwave.models.propulsion.motors.base.P
machwave.models.propulsion.motors.base.Motor *-- machwave.models.propulsion.motors.base.T
machwave.models.propulsion.motors.base.Motor <|-- machwave.models.propulsion.motors.solid.SolidMotor
footer Generated by //py2puml//
@enduml

